Update webgazer.js URL to use GitHub Pages
- Changed from jsdelivr CDN to self-hosted GitHub Pages
- URL: https://kiante-fernandez.github.io/webgazer-qualtrics/webgazer.js
- This resolves Qualtrics CSP blocking external CDN scripts

--- a/assets/webgazer-header.html
+++ b/assets/webgazer-header.html
@@ -14,7 +14,7 @@
     // Dynamic script loading to work around Qualtrics header restrictions
     (function() {
         var script = document.createElement('script');
-        script.src = 'https://cdn.jsdelivr.net/npm/webgazer@2.2.4/dist/webgazer.min.js';
+        script.src = 'https://kiante-fernandez.github.io/webgazer-qualtrics/webgazer.js';
         script.async = false; // Load synchronously to maintain order
 
         script.onload = function() {
