Fix TFFacemesh tracker compatibility issues
CRITICAL FIX: Remove TFFacemesh tracker to resolve predict/addData errors

Root Cause:
- TFFacemesh tracker requires TensorFlow.js v1.x dependencies
- These dependencies are NOT included in WebGazer 3.4.0 standalone build
- Resulted in 'predict is not a function' and 'addData is not a function' errors
- Video element size errors (0x0) occurred during initialization

Solution:
1. webgazer-header.html:
   - Removed .setTracker('TFFacemesh') call
   - Now uses WebGazer 3.4.0's default MediaPipe-based tracker
   - No external TensorFlow dependencies required
   - Simplified configuration to just .setRegression('ridge')

2. calibration-question.js:
   - Extended timeout from 10s to 15s (100 → 150 attempts)
   - Added try-catch error handling for recordScreenPosition()
   - Added diagnostic logging every 10 attempts
   - Better error messages for debugging

This resolves:
- TypeError: xB[n].predict is not a function
- TypeError: xB[s].addData is not a function
- Requested texture size [0x0] is invalid
- No stream errors
- Tracker initialization timeouts

--- a/assets/webgazer-header.html
+++ b/assets/webgazer-header.html
@@ -172,21 +172,14 @@
             // 1. Disable persistence (Legacy safe)
             try { webgazer.saveDataAcrossSessions(false); } catch (e) { }
 
-            // 2. Configure tracker with fallback logic
+            // 2. Configure regression (use default tracker - MediaPipe based)
+            // Note: Removed .setTracker('TFFacemesh') - requires TensorFlow.js v1.x deps
+            // Default tracker in WebGazer 3.4.0 is MediaPipe-based (no extra deps needed)
             try {
-                // Try to set TFFacemesh explicitly
-                webgazer.setRegression('ridge')
-                    .setTracker('TFFacemesh');
-                console.log("✓ Tracker configured: TFFacemesh with ridge regression");
+                webgazer.setRegression('ridge');
+                console.log("✓ Using default tracker with ridge regression");
             } catch (e) {
-                console.warn("Could not set tracker explicitly:", e);
-                // Fallback: Let WebGazer auto-select tracker
-                try {
-                    webgazer.setRegression('ridge');
-                    console.log("✓ Using default tracker with ridge regression");
-                } catch (e2) {
-                    console.error("Tracker configuration failed:", e2);
-                }
+                console.error("Regression configuration failed:", e);
             }
 
             // 3. Start WebGazer
