--- a/assets/webgazer-header.html
+++ b/assets/webgazer-header.html
@@ -14,11 +14,7 @@
         // The default CDN version contains 'eval' which is blocked by Qualtrics.
         // script.src = 'https://cdn.jsdelivr.net/gh/jspsych/jsPsych@7.0.0/examples/js/webgazer/webgazer.js'; // BLOCKED BY CSP
 
-        // Example: If you host it on GitHub Pages:
-        // script.src = 'https://your-username.github.io/your-repo/dist/webgazer-patched.js';
-
-        // For now, using a placeholder to remind you to update it:
-        script.src = 'INSERT_YOUR_HOSTED_WEBGAZER_PATCHED_JS_URL_HERE';
+        script.src = 'https://github.com/kiante-fernandez/webgazer-qualtrics/blob/main/dist/webgazer-patched.js';
 
         script.async = false;
 
